entity_macros/tests/ui/attribute/conflicting-field-named-created.stderr
error: Field named created reserved for ent
 --> $DIR/conflicting-field-named-created.rs:6:5
  |
6 |     #[ent(field)]
  |     ^
